@@ -27,7 +27,7 @@
 namespace reports {
 
 	enum TYPE { UNIT_NAME, UNIT_TYPE, UNIT_RACE, UNIT_LEVEL,
-		    UNIT_AMLA, UNIT_TRAITS, UNIT_STATUS,
+		    UNIT_SIDE, UNIT_AMLA, UNIT_TRAITS, UNIT_STATUS,
 		    UNIT_ALIGNMENT, UNIT_ABILITIES, UNIT_HP, UNIT_XP,
 		    UNIT_ADVANCEMENT_OPTIONS, UNIT_MOVES, UNIT_WEAPONS,
 		    UNIT_IMAGE, UNIT_PROFILE, TIME_OF_DAY,
